# smart-reloader

./: env_ci.py  env_comm.py  env_local.py  pyproject.toml  sandbox.py
smartreload/: __init__.py  base_objects.py  config.py  dependency_watcher.py  entrypoint.py  exceptions.py  misc.py  modules.py  objects.py  partialreloader.py  plugins.py  reloader.py  smart_django.py  smart_pandas.py  smart_reloader.py  watchdog.py
smartreloader/: __init__.py  config.py  dependency_watcher.py  e2e.py  entrypoint.py  misc.py  partialreloader.py  reloader.py  smart_django.py  smart_pandas.py  sr_logger.py  utils.py
smartreloader/objects/: __init__.py  base_objects.py  frames.py  modules.py  objects.py
tests/: conftest.py  test_classes.py  test_dictionaries.py  test_global_variable.py  test_misc.py  test_reload_frames.py  utils.py
tests/e2e/: conftest.py  test_misc.py  utils.py
tests/projects/citygroves/: __smartreload_adb5dcd8-e2d8-4b8f-abfa-7da673572950__.py  citygroves  smartreloader_config.py
tests/projects/citygroves/backend/: __init__.py  celer.py  settings.py  urls.py
tests/projects/citygroves/housing/: admin.py  models.py  serializer.py
tests/projects/citygroves/housing/migrations/: 0001_initial.py
tests/projects/citygroves/tenants/: admin.py  models.py  serializers.py  tools.py  urls.py  views.py
tests/projects/citygroves/tenants/migrations/: 0001_initial.py  0002_auto_20200210_1206.py
tests/unit/: test_classes.py  test_dictionaries.py  test_flat_names.py  test_frames.py  test_functions.py  test_global_variable.py  test_lists.py  test_misc.py  test_modules.py  test_plugins.py  test_reload_frames.py  test_tricky_types.py
tests/unit/test_classes/: test_method_deep_reload.py  test_misc.py
