[tool.poetry]
name = "smartreload"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
rich = "^9.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
isort = "^5.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
smartreload = "smartreload.entrypoint:_main"
