[tool.poetry]
name = "smartreload"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
rich = "^9.10.0"
globmatch = "^2.0.0"
watchdog = "^1.0.2"

[tool.poetry.dev-dependencies]
dataclasses = { version = "*", python = ">=3.6, <3.7" }
pytest = "^6.2.2"
isort = "^5.7.0"
black = "^20.8b1"
rhei = "^0.5.2"
pyte = "^0.8.0"

[tool.poetry.scripts]
smartreload = "smartreload.entrypoint:_main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

