[tool.poetry]
name = "smartreload"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
rich = "^9.10.0"
globmatch = "^2.0.0"
watchdog = "^1.0.2"
dataclasses = { version = "*", python = ">=3.6, <3.7" }
dill = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
isort = "^5.7.0"
black = "^20.8b1"
rhei = "^0.5.2"
pyte = "^0.8.0"
django = "^3.0"
loguru = "^0.4.0"
django-click = "^2.1"
psycopg2-binary = "^2.8"
djangorestframework = "^3.11"
celery = "^4.3"
ipython = "^7.10"
pytest-django = "^3.7"
pytest-socket = "^0.3.3"
pytest-env = "^0.6.2"
pyyaml = "^5.2"
redis = "^3.3"
factory_boy = "^2.12"
pytest-factoryboy = "^2.0"
django-extensions = "^2.2"
django-cors-headers = "^3.2"
tqdm = "^4.41"
django-environ = "^0.4.5"
django-filter = "^2.4.0"
pandas = "1.1.4"
pytest-ordering = "^0.6"
pytest-rerunfailures = "^9.1.1"

[tool.poetry.scripts]
smartreload = "smartreload.entrypoint:_main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

